--- a/src/main/resources/afficherPostgroup.fxml
+++ b/src/main/resources/afficherPostgroup.fxml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane prefHeight="684.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.afficherPostgroup">
+<AnchorPane prefHeight="684.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.afficherPostgroup">
     <children>
         <VBox layoutX="20.0" layoutY="38.0" prefHeight="646.0" prefWidth="873.0" styleClass="card" stylesheets="@style/styleafficher.css">
             <children>
                 <HBox prefHeight="122.0" prefWidth="737.0">
                     <children>
-                        <ImageView fitHeight="29.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@images/bouton-retour.png" />
-                            </image>
+                        <Button fx:id="buttonretour" onAction="#handlesponsorButtonClick">
+                            <graphic>
+                                <ImageView fitHeight="29.0" fitWidth="26.0">
+                                    <image>
+                                        <Image url="@images/bouton-retour.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
                             <HBox.margin>
                                 <Insets left="30.0" top="10.0" />
                             </HBox.margin>
-                        </ImageView>
+                        </Button>
+
                         <HBox prefHeight="122.0" prefWidth="422.0" styleClass="card" stylesheets="@style/styleafficher.css">
                             <children>
                                 <VBox prefHeight="122.0" prefWidth="325.0" styleClass="card" stylesheets="@style/styleafficher.css">
                                     <children>
-                                        <Label alignment="BOTTOM_LEFT" prefHeight="65.0" prefWidth="260.0" text="sponsoring name">
+                                        <Label fx:id="sponsoringLabel" alignment="BOTTOM_LEFT" prefHeight="65.0" prefWidth="260.0">
                                             <font>
                                                 <Font name="Cambria Math" size="18.0" />
                                             </font>
@@ -71,7 +69,7 @@
                         <String fx:value="card" />
                     </styleClass>
                 </HBox>
-                <VBox fx:id="postbox" styleClass="eco-card" prefHeight="521.0" prefWidth="795.0">
+                <VBox fx:id="postbox" prefHeight="521.0" prefWidth="795.0" styleClass="eco-card">
                     <!-- Les posts seront affichés ici -->
                 </VBox>
             </children>
