--- a/src/main/resources/ajouterSponsoring.fxml
+++ b/src/main/resources/ajouterSponsoring.fxml
@@ -14,7 +14,7 @@
             <children>
                 <VBox alignment="CENTER" layoutX="27.0" layoutY="11.0" prefHeight="539.0" prefWidth="384.0" spacing="10">
                     <children>
-                        <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Ajouter un sponsoring" />
+                        <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Add sponsoring" />
                         <TextField fx:id="nameField" prefHeight="21.0" prefWidth="384.0" promptText="Nom" styleClass="search-box">
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
