--- a/src/main/resources/showsponsoring.fxml
+++ b/src/main/resources/showsponsoring.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.showSponsoring">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.showSponsoring">
     <VBox alignment="CENTER" layoutX="6.0" layoutY="-62.0" prefHeight="455.0" prefWidth="772.0">
         <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="List sponsoring" />
+      <Button fx:id="buttonajouter" mnemonicParsing="false" onAction="#handlesponsorButtonClick" text="ADD NEW SPONSOR"/>
         <TableView fx:id="sponsoringTable" prefHeight="258.0" prefWidth="751.0">
             <columns>
                 <TableColumn fx:id="nameColumn" prefWidth="76.800048828125" text="Name" />
