--- a/src/main/resources/user/updateUser.fxml
+++ b/src/main/resources/user/updateUser.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <ScrollPane hmax="600.0" hmin="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.user.UserController">
     <content>
         <AnchorPane>
@@ -38,7 +37,7 @@
                                                 <VBox alignment="CENTER" layoutX="460.0" layoutY="10.0" spacing="10.0">
                                                     <children>
                                                         <Button mnemonicParsing="false" onAction="#openFileChooser" prefWidth="100.0" text="Choose picture" />
-                                                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefWidth="100.0" text="Remove picture" />
+                                                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#removePicture" prefWidth="100.0" text="Remove picture" />
                                                     </children>
                                                 </VBox>
                                             </children>
@@ -46,7 +45,8 @@
                                                 <Insets bottom="4.0" />
                                             </VBox.margin>
                                         </HBox>
-                                        <Button maxHeight="35.0" minHeight="35.0" onAction="#updateInformation" prefHeight="35.0" prefWidth="1000.0" text="Submit" />
+                                        <Label fx:id="profilePictureUpdateMessageLabel" />
+                                        <Button maxHeight="35.0" minHeight="35.0" onAction="#performUpdatePicture" prefHeight="35.0" prefWidth="500.0" text="Submit" />
                                     </children>
                                 </VBox>
                             </content>
@@ -61,7 +61,7 @@
                                 <TextField fx:id="addressField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
                                 <VBox fx:id="addressErrorsContainer" />
                                 <Label fx:id="infoUpdateMessageLabel" />
-                                <Button maxHeight="35.0" minHeight="35.0" onAction="#updateInformation" prefHeight="35.0" prefWidth="1000.0" text="Update Information" />
+                                <Button maxHeight="35.0" minHeight="35.0" onAction="#updateInformation" prefHeight="35.0" prefWidth="500.0" text="Update Information" />
                             </VBox>
                         </TitledPane>
 
@@ -77,7 +77,7 @@
                                 <PasswordField fx:id="passwordForEmailField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
                                 <VBox fx:id="passwordForEmailErrorsContainer" />
                                 <Label fx:id="emailUpdateMessageLabel" />
-                                <Button maxHeight="35.0" minHeight="35.0" onAction="#changeEmail" prefHeight="35.0" prefWidth="1000.0" text="Change Email" />
+                                <Button maxHeight="35.0" minHeight="35.0" onAction="#changeEmail" prefHeight="35.0" prefWidth="500.0" text="Change Email" />
                             </VBox>
                         </TitledPane>
 
@@ -92,12 +92,28 @@
                                 <PasswordField fx:id="newPasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
                                 <VBox fx:id="newPasswordErrorsContainer" />
                                 <Label fx:id="passwordUpdateMessageLabel" />
-                                <Button maxHeight="35.0" minHeight="35.0" onAction="#changePassword" prefHeight="35.0" prefWidth="1000.0" text="Change Password" />
+                                <Button maxHeight="35.0" minHeight="35.0" onAction="#changePassword" prefHeight="35.0" prefWidth="500.0" text="Change Password" />
                             </VBox>
                         </TitledPane>
+                  <TitledPane layoutX="10.0" layoutY="763.0" text="Delete Account">
+                     <content>
+                        <VBox spacing="5.0">
+                           <children>
+                              <Label text="Password:" />
+                              <PasswordField fx:id="deletePasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                              <VBox fx:id="deletePasswordErrorsContainer" />
+                              <Label fx:id="deleteMessageLabel" />
+                              <Button maxHeight="35.0" minHeight="35.0" onAction="#deleteAccount" prefHeight="35.0" prefWidth="500.0" style="-fx-background-color: #ed372d;" text="Delete Account" textFill="WHITE" />
+                           </children>
+                        </VBox>
+                     </content>
+                  </TitledPane>
                     </VBox>
                 </children>
             </HBox>
         </AnchorPane>
     </content>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </ScrollPane>
