--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -126,11 +126,18 @@
 }
 
 .eco-card {
-    -fx-background-color: #e7e5e5; /* Set background color */
+    -fx-background-color: #f9f7f7; /* Light background color */
     -fx-padding: 20px; /* Add padding */
-    -fx-border-color: #ccc; /* Set border color */
+    -fx-border-color: #dcdcdc; /* Light border color */
     -fx-border-width: 1px; /* Set border width */
+    -fx-border-radius: 5px; /* Add border radius for rounded corners */
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 10, 0, 0, 0); /* Add drop shadow effect */
 }
+
+.eco-card:hover {
+    -fx-background-color: #f2f2f2; /* Lighter background color on hover */
+}
+
 
 .back-button {
     -fx-background-color: transparent; /* Set background color */
