--- a/src/main/resources/afficherPostgroup.fxml
+++ b/src/main/resources/afficherPostgroup.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="684.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.afficherPostgroup">
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane prefHeight="665.0" prefWidth="875.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.afficherPostgroup">
     <children>
-        <VBox layoutX="20.0" layoutY="38.0" prefHeight="646.0" prefWidth="873.0" styleClass="card" stylesheets="@style/styleafficher.css">
+        <VBox layoutX="-2.0" layoutY="7.0" prefHeight="658.0" prefWidth="869.0" styleClass="card" stylesheets="@style/styleafficher.css">
             <children>
-                <HBox prefHeight="122.0" prefWidth="737.0">
+                <HBox prefHeight="118.0" prefWidth="707.0">
                     <children>
                         <Button fx:id="buttonretour" onAction="#handlesponsorButtonClick">
                             <graphic>
@@ -25,13 +32,13 @@
                             </HBox.margin>
                         </Button>
 
-                        <HBox prefHeight="122.0" prefWidth="422.0" styleClass="card" stylesheets="@style/styleafficher.css">
+                        <HBox prefHeight="113.0" prefWidth="354.0" styleClass="card" stylesheets="@style/styleafficher.css">
                             <children>
-                                <VBox prefHeight="122.0" prefWidth="325.0" styleClass="card" stylesheets="@style/styleafficher.css">
+                                <VBox prefHeight="70.0" prefWidth="294.0" styleClass="card" stylesheets="@style/styleafficher.css">
                                     <children>
                                         <Label fx:id="sponsoringLabel" alignment="BOTTOM_LEFT" prefHeight="65.0" prefWidth="260.0">
                                             <font>
-                                                <Font name="Cambria Math" size="18.0" />
+                                                <Font name="Cambria Math" size="36.0" />
                                             </font>
                                         </Label>
                                     </children>
@@ -69,10 +76,14 @@
                         <String fx:value="card" />
                     </styleClass>
                 </HBox>
-                <VBox fx:id="postbox" prefHeight="521.0" prefWidth="795.0" styleClass="eco-card">
+                <ScrollPane fitToWidth="true">
+                <VBox fx:id="postbox" prefHeight="254.0" prefWidth="692.0" styleClass="post-card">
                     <!-- Les posts seront affichés ici -->
+                    <!-- Ajoutez le TextField et le Button pour les commentaires dans la boucle for de la méthode afficherPostsSponsoring -->
                 </VBox>
+                </ScrollPane>
             </children>
+
         </VBox>
     </children>
 </AnchorPane>
