--- a/src/main/resources/affichersponsoring.fxml
+++ b/src/main/resources/affichersponsoring.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="459.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.afficherSponsoring">
-    <Label layoutX="250.0" layoutY="14.0" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Forum" />
-    <HBox alignment="CENTER" layoutX="17.0" layoutY="53.0" prefHeight="370.0" prefWidth="566.0" VBox.vgrow="ALWAYS">
+<AnchorPane prefHeight="622.0" prefWidth="863.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.afficherSponsoring">
+    <Label layoutX="359.0" layoutY="14.0" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Forum" />
+    <HBox alignment="CENTER" layoutX="1.0" layoutY="99.0" prefHeight="516.0" prefWidth="863.0" VBox.vgrow="ALWAYS">
         <children>
-            <ScrollPane fx:id="scroll" prefHeight="360.0" prefWidth="532.0" styleClass="scroll-pane" stylesheets="@style/styleafficher.css">
+            <ScrollPane fx:id="scroll" prefHeight="506.0" prefWidth="826.0" styleClass="scroll-pane" stylesheets="@style/styleafficher.css">
                 <content>
-                    <GridPane fx:id="grid" prefHeight="352.0" prefWidth="447.0" styleClass="grid-pane">
+                    <GridPane fx:id="grid" prefHeight="503.0" prefWidth="824.0" styleClass="grid-pane">
                         <columnConstraints>
                             <ColumnConstraints hgrow="ALWAYS" />
                             <ColumnConstraints hgrow="ALWAYS" />
