--- a/src/main/resources/showsponsoring.fxml
+++ b/src/main/resources/showsponsoring.fxml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.showSponsoring">
-    <VBox alignment="CENTER" layoutX="6.0" layoutY="-62.0" prefHeight="455.0" prefWidth="772.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.showSponsoring">
+    <VBox alignment="CENTER" layoutX="6.0" layoutY="-24.0" prefHeight="459.0" prefWidth="951.0">
         <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="List sponsoring" />
-      <Button fx:id="buttonajouter" mnemonicParsing="false" onAction="#handlesponsorButtonClick" text="ADD NEW SPONSOR"/>
-        <TableView fx:id="sponsoringTable" prefHeight="258.0" prefWidth="751.0">
+      <Button fx:id="buttonajouter" mnemonicParsing="false" onAction="#handlesponsorButtonClick" text="ADD NEW SPONSOR" />
+        <TableView fx:id="sponsoringTable" prefHeight="258.0" prefWidth="867.0">
             <columns>
-                <TableColumn fx:id="nameColumn" prefWidth="76.800048828125" text="Name" />
-                <TableColumn fx:id="descriptionColumn" prefWidth="119.99993896484375" text="Description" />
-                <TableColumn fx:id="imageColumn" prefWidth="120.79998779296875" text="Image" />
-                <TableColumn fx:id="dateColumn" prefWidth="90.4000244140625" text="Date" />
-                <TableColumn fx:id="contratColumn" prefWidth="111.99996948242188" text="Contrat" />
-                <TableColumn fx:id="typeColumn" prefWidth="110.39996337890625" text="Type" />
-                <TableColumn fx:id="actionsColumn" prefWidth="137.60001220703123" text="Actions" />
+                <TableColumn fx:id="nameColumn" prefWidth="113.60000467300415" text="Name" />
+                <TableColumn fx:id="descriptionColumn" prefWidth="151.20000457763672" text="Description" />
+                <TableColumn fx:id="imageColumn" prefWidth="134.4000244140625" text="Image" />
+                <TableColumn fx:id="dateColumn" prefWidth="127.20004272460938" text="Date" />
+                <TableColumn fx:id="contratColumn" prefWidth="135.199951171875" text="Contrat" />
+                <TableColumn fx:id="typeColumn" prefWidth="112.800048828125" text="Type" />
+                <TableColumn fx:id="actionsColumn" prefWidth="176.0001220703125" text="Actions" />
             </columns>
         </TableView>
     </VBox>
