--- a/src/main/resources/style/styleafficher.css
+++ b/src/main/resources/style/styleafficher.css
@@ -21,7 +21,7 @@
 
 
 .right-bar{
-    -fx-background-color: #F8C07F;
+    -fx-background-color: #f6e6d4;
 }
 
 .shadow {
@@ -44,13 +44,13 @@
     -fx-background-radius: 30;
 }
 .eco-card {
-    -fx-background-color: rgb(245, 240, 174);
+    -fx-background-color: rgb(250, 247, 208);
     -fx-background-radius: 10px; /* Coins arrondis */
     -fx-padding: 15px; /* Marge intérieure */
     -fx-spacing: 10px; /* Espacement entre les éléments */
 }
 .card {
-    -fx-background-color: #fcdc6b; /* Couleur de fond */
+    -fx-background-color: white; /* Couleur de fond */
     -fx-background-radius: 20px; /* Coins arrondis */
     -fx-padding: 30px; /* Marge intérieure */
     -fx-spacing: 30px; /* Espacement entre les éléments */
@@ -70,6 +70,17 @@
     -fx-background-radius: 30;
 
 }
+.post-card {
+    -fx-background-color: #FFFFFF;
+    -fx-border-color: #CCCCCC;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-padding: 10px;
+    -fx-spacing: 10px; /* Espace entre les éléments à l'intérieur de la carte */
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 10);
+}
+
 
 
 
