--- a/src/main/resources/com/codewarrior/markets_coupons/displayMarket-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/displayMarket-view.fxml
@@ -33,7 +33,7 @@
                </ImageView>
             </children>
          </Pane>
-         <Pane layoutX="14.0" layoutY="96.0" prefHeight="59.0" prefWidth="60.0">
+         <Pane fx:id="deleteMarket" layoutX="14.0" layoutY="96.0" onMouseClicked="#deleteMarket" prefHeight="59.0" prefWidth="60.0">
             <children>
                <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                   <image>
