--- a/src/main/resources/com/codewarrior/markets_coupons/displayMarket-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/displayMarket-view.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="755.0" prefWidth="1007.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.codewarrior.markets_coupons.controller.MarketDisplayController">
-    <TableView fx:id="marketTable" layoutX="39.0" layoutY="34.0" onMouseClicked="#getMarketInfo" prefHeight="700.0" prefWidth="556.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="925.0" prefWidth="1392.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.codewarrior.markets_coupons.controller.MarketDisplayController">
+    <TableView fx:id="marketTable" layoutX="39.0" layoutY="34.0" onMouseClicked="#getMarketInfo" prefHeight="787.0" prefWidth="527.0">
         <columns>
          <TableColumn fx:id="colName" text="Name" />
          <TableColumn fx:id="colAddress" text="Address" />
@@ -17,14 +20,14 @@
          <TableColumn fx:id="colZipCode" text="Zip Code" />
         </columns>
     </TableView>
-   <Pane layoutX="615.0" layoutY="34.0" prefHeight="412.0" prefWidth="381.0">
+   <Pane layoutX="753.0" layoutY="34.0" prefHeight="412.0" prefWidth="368.0">
       <children>
-         <ImageView fx:id="marketImage" fitHeight="384.0" fitWidth="348.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id="marketImage" fitHeight="384.0" fitWidth="348.0" layoutX="10.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       </children>
    </Pane>
-   <Pane layoutX="615.0" layoutY="476.0" prefHeight="263.0" prefWidth="97.0">
+   <Pane layoutX="14.0" layoutY="830.0" prefHeight="81.0" prefWidth="248.0">
       <children>
-         <Pane layoutX="14.0" layoutY="14.0" prefHeight="59.0" prefWidth="60.0">
+         <Pane layoutX="94.0" layoutY="14.0" onMouseClicked="#updateMarket" prefHeight="59.0" prefWidth="60.0">
             <children>
                <ImageView fitHeight="52.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                   <image>
@@ -33,7 +36,7 @@
                </ImageView>
             </children>
          </Pane>
-         <Pane fx:id="deleteMarket" layoutX="14.0" layoutY="96.0" onMouseClicked="#deleteMarket" prefHeight="59.0" prefWidth="60.0">
+         <Pane fx:id="deleteMarket" layoutX="14.0" layoutY="11.0" onMouseClicked="#deleteMarket" prefHeight="59.0" prefWidth="60.0">
             <children>
                <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                   <image>
@@ -42,7 +45,7 @@
                </ImageView>
             </children>
          </Pane>
-         <Pane fx:id="back" layoutX="14.0" layoutY="173.0" onMouseClicked="#goBack" prefHeight="59.0" prefWidth="60.0">
+         <Pane fx:id="back" layoutX="161.0" layoutY="14.0" onMouseClicked="#goBack" prefHeight="59.0" prefWidth="60.0">
             <children>
                <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                   <image>
@@ -51,6 +54,21 @@
                </ImageView>
             </children>
          </Pane>
+      </children>
+   </Pane>
+   <Pane layoutX="585.0" layoutY="456.0" prefHeight="456.0" prefWidth="726.0">
+      <children>
+         <TextField fx:id="updateName" layoutX="61.0" layoutY="113.0" prefHeight="24.0" prefWidth="257.0" promptText="market's name" />
+         <TextField fx:id="updateRegion" layoutX="390.0" layoutY="113.0" prefHeight="24.0" prefWidth="257.0" promptText="region" />
+         <TextField fx:id="updateAddress" layoutX="61.0" layoutY="192.0" prefHeight="24.0" prefWidth="257.0" promptText="market's address" />
+         <TextField fx:id="updateZipCode" layoutX="390.0" layoutY="192.0" prefHeight="24.0" prefWidth="257.0" promptText="zipCode" />
+         <TextField fx:id="updateCity" layoutX="61.0" layoutY="273.0" prefHeight="24.0" prefWidth="257.0" promptText="city" />
+         <Button layoutX="330.0" layoutY="399.0" mnemonicParsing="false" text="Update" />
+         <Label fx:id="controllName" layoutX="61.0" layoutY="149.0" prefHeight="24.0" prefWidth="257.0" />
+         <Label fx:id="controlCity" layoutX="61.0" layoutY="309.0" prefHeight="24.0" prefWidth="257.0" />
+         <Label fx:id="controlAddress" layoutX="61.0" layoutY="228.0" prefHeight="24.0" prefWidth="257.0" />
+         <Label fx:id="controllRegion" layoutX="390.0" layoutY="149.0" prefHeight="24.0" prefWidth="257.0" />
+         <Label fx:id="controllZipCode" layoutX="390.0" layoutY="228.0" prefHeight="24.0" prefWidth="257.0" />
       </children>
    </Pane>
 </AnchorPane>
