--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -80,13 +80,6 @@
 }
 
 
-.text-area {
-    -fx-background-color: #f0f0f0; /* Set background color */
-    -fx-border-color: #ccc; /* Set border color */
-    -fx-border-width: 1px; /* Set border width */
-    -fx-border-radius: 5px; /* Set border radius */
-}
-
 .submit-button {
     -fx-background-color: #2196f3; /* Set background color */
     -fx-text-fill: white; /* Set text color */
@@ -154,14 +147,109 @@
 
 
 
+
+
+
+
+
+
+
 .comments-popup {
-    -fx-background-color: white; /* Set background color */
-    -fx-padding: 20px; /* Add padding */
+    background-color: #f9f9f9;
+    padding: 20px;
+    -fx-font-family: "Arial", sans-serif;
 }
 
+.comment-container {
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+    -fx-border-color: #dcdcdc;
+    -fx-padding: 10px;
+    -fx-background-color: #f9f7f7;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 10, 0, 0, 0);
+    -fx-margin-bottom: 15px;
+}
 
 .comment-label {
-    -fx-font-size: 14px; /* Set font size */
-    -fx-text-fill: #333333; /* Set text color */
-    -fx-padding: 5px; /* Add padding */
+    -fx-font-size: 14px;
+    -fx-text-fill: #333;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.input-field {
+    -fx-background-color: #f0f0f0;
+    -fx-border-color: #ccc;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
+    -fx-padding: 5px;
+}
+
+.text-area {
+    -fx-background-color: #f0f0f0;
+    -fx-border-color: #ccc;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
+    -fx-padding: 5px;
+}
+
+.select-button, .submit--button {
+    -fx-background-color: #4CAF50; /* Green */
+    -fx-border: none;
+    -fx-color: white;
+    -fx-padding: 10px 20px;
+    -fx-text-fill: white;
+    -fx-cursor: hand;
+    -fx-font-size: 14px;
+    -fx-border-radius: 5px;
+}
+
+.combo-box {
+    -fx-background-color: #f0f0f0;
+    -fx-border-color: #ccc;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
+    -fx-padding: 5px;
+}
+
+.back--button {
+    -fx-background-color: transparent;
+    -fx-border: none;
+    -fx-cursor: hand;
+}
+
+.back--button:hover {
+    -fx-background-color: #f0f0f0;
+}
+
+.error-text {
+    -fx-fill: red;
+    -fx-font-size: 12px;
+}
+
+
