--- a/src/main/resources/comment_dialog.fxml
+++ b/src/main/resources/comment_dialog.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="Controller.CommentDialogController" stylesheets="style.css">
+      fx:controller="edu.esprit.controller.CommentDialogController" stylesheets="style.css">
     <TextArea fx:id="commentTextArea" prefHeight="100" promptText="Enter your comment here" styleClass="text-area"/>
     <Button onAction="#submitComment" styleClass="submit-button">
         <graphic>
