--- a/src/main/resources/com/codewarrior/markets_coupons/category-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/category-view.fxml
@@ -75,13 +75,11 @@
       </Pane>
       <Pane layoutX="384.0" layoutY="134.0" prefHeight="352.0" prefWidth="474.0" style="-fx-background-color: gray;">
          <children>
-            <TextField fx:id="titleField" layoutX="91.0" layoutY="45.0" promptText="add title" />
-            <TextArea fx:id="descriptionField" layoutX="57.0" layoutY="96.0" prefHeight="108.0" prefWidth="238.0" promptText="Description ..." />
-            <Pane layoutX="211.0" layoutY="241.0" prefHeight="81.0" prefWidth="84.0">
-               <children>
-                  <Button layoutX="20.0" layoutY="29.0" mnemonicParsing="false" onMouseClicked="#addButton" text="Add" />
-               </children>
-            </Pane>
+            <TextField fx:id="titleField" layoutX="24.0" layoutY="39.0" promptText="add title" />
+            <TextArea fx:id="descriptionField" layoutX="14.0" layoutY="142.0" prefHeight="108.0" prefWidth="238.0" promptText="Description ..." />
+            <Label fx:id="descriptionControll" layoutX="30.0" layoutY="263.0" prefHeight="24.0" prefWidth="159.0" textFill="WHITE" />
+            <Button layoutX="324.0" layoutY="294.0" mnemonicParsing="false" onMouseClicked="#addButton" text="Add" />
+            <Label fx:id="titleControll" layoutX="24.0" layoutY="73.0" prefHeight="56.0" prefWidth="270.0" textFill="RED" />
          </children>
       </Pane>
    </children>
