--- a/src/main/resources/com/codewarrior/markets_coupons/voucher-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/voucher-view.fxml
@@ -44,7 +44,7 @@
         </Pane>
         <Pane layoutX="14.0" layoutY="134.0" prefHeight="487.0" prefWidth="341.0" style="-fx-background-color: black;">
             <children>
-                <Pane layoutX="22.0" layoutY="63.0" prefHeight="81.0" prefWidth="302.0" style="-fx-background-color: white;">
+                <Pane layoutX="22.0" layoutY="63.0" onMouseClicked="#displayRoute" prefHeight="81.0" prefWidth="302.0" style="-fx-background-color: white;">
                     <children>
                         <ImageView fitHeight="50.0" fitWidth="43.0" layoutX="20.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -80,20 +80,20 @@
             <children>
             <Pane layoutX="14.0" layoutY="16.0" prefHeight="455.0" prefWidth="536.0">
                <children>
-                      <TextField layoutX="108.0" layoutY="53.0" prefHeight="24.0" prefWidth="197.0" promptText="add value eg : 100 $" />
+                      <TextField fx:id="valueField" layoutX="108.0" layoutY="53.0" prefHeight="24.0" prefWidth="197.0" promptText="add value eg : 100 $" />
                       <Pane layoutX="31.0" layoutY="398.0" prefHeight="43.0" prefWidth="63.0">
                      <children>
-                              <Button layoutX="11.0" layoutY="9.0" mnemonicParsing="false" text="Add" />
+                              <Button layoutX="11.0" layoutY="9.0" mnemonicParsing="false" onMouseClicked="#addVoucher" text="Add" />
                      </children>
                       </Pane>
-                  <DatePicker layoutX="108.0" layoutY="107.0" />
-                  <CheckBox layoutX="224.0" layoutY="183.0" mnemonicParsing="false" text="validity" />
-                  <ComboBox layoutX="108.0" layoutY="180.0" prefHeight="24.0" prefWidth="63.0" promptText="0" />
-                  <ComboBox layoutX="108.0" layoutY="252.0" prefWidth="150.0" promptText="user" />
-                  <ComboBox layoutX="313.0" layoutY="252.0" prefWidth="150.0" promptText="market" />
-                  <ComboBox layoutX="108.0" layoutY="308.0" prefWidth="150.0" promptText="category" />
-                  <TextArea layoutX="305.0" layoutY="288.0" prefHeight="144.0" prefWidth="215.0" promptText="type of coupons ..." />
-                  <CheckBox layoutX="352.0" layoutY="183.0" mnemonicParsing="false" text="Isgiven" />
+                  <DatePicker fx:id="dateField" layoutX="108.0" layoutY="107.0" />
+                  <CheckBox fx:id="validityBox" layoutX="224.0" layoutY="183.0" mnemonicParsing="false" text="validity" />
+                  <ComboBox fx:id="usableField" layoutX="108.0" layoutY="180.0" prefHeight="24.0" prefWidth="63.0" promptText="0-1" visibleRowCount="1" />
+                  <ComboBox fx:id="userField" layoutX="108.0" layoutY="252.0" prefWidth="150.0" promptText="user" />
+                  <ComboBox fx:id="marketField" layoutX="313.0" layoutY="252.0"  prefWidth="150.0" promptText="market" />
+                  <ComboBox fx:id="categoryField" layoutX="108.0" layoutY="308.0"  prefWidth="150.0" promptText="category" />
+                  <TextArea fx:id="typeField" layoutX="305.0" layoutY="288.0" prefHeight="144.0" prefWidth="215.0" promptText="type of coupons ..." />
+                  <CheckBox fx:id="isGIvenBox" layoutX="352.0" layoutY="183.0" mnemonicParsing="false" text="Isgiven" />
                </children>
             </Pane>
             </children>
