--- a/src/main/resources/comment_dialog.fxml
+++ b/src/main/resources/comment_dialog.fxml
@@ -8,11 +8,12 @@
     <TextArea fx:id="commentTextArea" prefHeight="100" promptText="Enter your comment here" styleClass="text-area"/>
     <Button onAction="#submitComment" styleClass="submit-button">
         <graphic>
-            <ImageView fitWidth="16" fitHeight="16">
+            <ImageView>
                 <image>
-                    <Image url="/icons/cmnt.png"/> <!-- Replace "your_icon.png" with the path to your local image -->
+                    <Image url="/icons/cmnt.png"/> <!-- Use ImageView and Image elements -->
                 </image>
             </ImageView>
+
         </graphic>
     </Button>
 </VBox>
